# ChessEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
chessBoard/: CMakeLists.txt  README.md
chessBoard/include/: Attacks.hpp  Bitboard.hpp  Move.hpp  MoveGen.hpp  Outcome.hpp  Perft.hpp  Position.hpp  Types.hpp  Zobrist.hpp
chessBoard/src/: Attacks.cpp  Bitboard.cpp  Move.cpp  MoveGen.cpp  Outcome.cpp  Perft.cpp  Position.cpp  Zobrist.cpp  perft_main.cpp
chessBoard/test/: perft_test.cpp  state_test.cpp
chessBot/: CMakeLists.txt
chessBot/include/: Evaluation.hpp  Search.hpp
chessBot/src/: Evaluation.cpp  Search.cpp  bot_main.cpp
chessBot/test/: search_test.cpp
chessGUI/: CMakeLists.txt
chessGUI/include/: Constants.hpp  Game.hpp  RenderWindow.hpp
chessGUI/res/: DejaVuSans.LICENSE.txt
chessGUI/src/: Constants.cpp  Game.cpp  RenderWindow.cpp  main.cpp
